--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Pomodoro Timer</h1>
     <div id="timer">00:05</div>
     <button id="start">Start</button>
+    <button id="stop">Stop</button>
   </body>
 </html>
