--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pomodoro Timer</title>
-    <script src="./script.js" defer></script>
-    <link rel="stylesheet" href="./styles.css" />
-  </head>
-  <body>
-    <h1>Pomodoro Timer</h1>
-    <div id="timer">00:05</div>
-    <button id="start">Start</button>
-    <button id="stop">Stop</button>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pomodoro Timer</title>
+  <script src="./script.js" defer></script>
+  <link rel="stylesheet" href="./styles.css" />
+</head>
+
+<body>
+  <h1>Pomodoro Timer</h1>
+  <div id="timer">00:05</div>
+  <button id="start">Start</button>
+  <button id="stop">Stop</button>
+  <button id="reset">Reset</button>
+</body>
+
 </html>
