--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <h1>Pomodoro Timer</h1>
+  <button>Pomodoro</button>
   <div id="timer">00:05</div>
   <button id="start">Start</button>
   <button id="stop">Stop</button>
