--- a/index.html
+++ b/index.html
@@ -11,11 +11,23 @@
 
 <body>
   <h1>Pomodoro Timer</h1>
-  <button>Pomodoro</button>
-  <div id="timer">00:05</div>
-  <button id="start">Start</button>
-  <button id="stop">Stop</button>
-  <button id="reset">Reset</button>
+
+  <button id="pomodoroButton">Pomodoro</button>
+  <button id="shortBreakButton">Short Break</button>
+
+  <div id="pomodoroContainer">
+    <div id="timer" class="timer">00:05</div>
+    <button id="start">Start</button>
+    <button id="stop">Stop</button>
+    <button id="reset">Reset</button>
+  </div>
+
+  <div id="shortBreakContainer">
+    <div id="shortBreakTimer" class="timer">05:00</div>
+    <button id="startShortBreak">Start</button>
+    <button id="stopShortBreak">Stop</button>
+    <button id="resetShortBreak">Reset</button>
+  </div>
 </body>
 
 </html>
