begin renaming variables

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <button id="shortBreakButton">Short Break</button>
 
   <div id="pomodoroContainer">
-    <div id="timer" class="timer">00:05</div>
+    <div id="pomodoroTimer" class="timer">00:05</div>
     <button id="start">Start</button>
     <button id="stop">Stop</button>
     <button id="reset">Reset</button>
