refactor to domain terms

--- a/index.html
+++ b/index.html
@@ -14,19 +14,27 @@
 
   <button id="pomodoroButton">Pomodoro</button>
   <button id="shortBreakButton">Short Break</button>
+  <button id="longBreakButton">Long Break</button>
 
   <div id="pomodoroContainer">
     <div id="pomodoroTimer" class="timer">00:05</div>
-    <button id="start">Start</button>
-    <button id="stop">Stop</button>
-    <button id="reset">Reset</button>
+    <button id="pomodoroStartButton">Start</button>
+    <button id="pomodoroStopButton">Stop</button>
+    <button id="pomodoroResetButton">Reset</button>
   </div>
 
   <div id="shortBreakContainer">
     <div id="shortBreakTimer" class="timer">05:00</div>
-    <button id="startShortBreak">Start</button>
-    <button id="stopShortBreak">Stop</button>
-    <button id="resetShortBreak">Reset</button>
+    <button id="shortBreakStartButton">Start</button>
+    <button id="shortBreakStopButton">Stop</button>
+    <button id="shortBreakResetButton">Reset</button>
+  </div>
+
+  <div id="longBreakContainer">
+    <div id="longBreakTimer" class="timer">15:00</div>
+    <button id="longBreakStartButton">Start</button>
+    <button id="longBreakStopButton">Stop</button>
+    <button id="longBreakResetButton">Reset</button>
   </div>
 </body>
 
