rename nav buttons

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
   <h1>Pomodoro Timer</h1>
 
-  <button id="pomodoroButton">Pomodoro</button>
-  <button id="shortBreakButton">Short Break</button>
-  <button id="longBreakButton">Long Break</button>
+  <button id="pomodoroNavButton">Pomodoro</button>
+  <button id="shortBreakNavButton">Short Break</button>
+  <button id="longBreakNavButton">Long Break</button>
 
   <div id="pomodoroContainer">
     <div id="pomodoroTimer" class="timer">00:05</div>
