--- a/index.html
+++ b/index.html
@@ -10,32 +10,34 @@
 </head>
 
 <body>
-  <h1>Pomodoro Timer</h1>
+  <main>
+    <h1>Pomodoro Timer</h1>
 
-  <button id="pomodoroNavButton">Pomodoro</button>
-  <button id="shortBreakNavButton">Short Break</button>
-  <button id="longBreakNavButton">Long Break</button>
+    <button id="pomodoroNavButton">Pomodoro</button>
+    <button id="shortBreakNavButton">Short Break</button>
+    <button id="longBreakNavButton">Long Break</button>
 
-  <div id="pomodoroContainer">
-    <div id="pomodoroTimer" class="timer">00:05</div>
-    <button id="pomodoroStartButton">Start</button>
-    <button id="pomodoroStopButton">Stop</button>
-    <button id="pomodoroResetButton">Reset</button>
-  </div>
+    <div id="pomodoroContainer">
+      <div id="pomodoroTimer" class="timer">00:05</div>
+      <button id="pomodoroStartButton">Start</button>
+      <button id="pomodoroStopButton">Stop</button>
+      <button id="pomodoroResetButton">Reset</button>
+    </div>
 
-  <div id="shortBreakContainer">
-    <div id="shortBreakTimer" class="timer">00:06</div>
-    <button id="shortBreakStartButton">Start</button>
-    <button id="shortBreakStopButton">Stop</button>
-    <button id="shortBreakResetButton">Reset</button>
-  </div>
+    <div id="shortBreakContainer">
+      <div id="shortBreakTimer" class="timer">00:06</div>
+      <button id="shortBreakStartButton">Start</button>
+      <button id="shortBreakStopButton">Stop</button>
+      <button id="shortBreakResetButton">Reset</button>
+    </div>
 
-  <div id="longBreakContainer">
-    <div id="longBreakTimer" class="timer">00:07</div>
-    <button id="longBreakStartButton">Start</button>
-    <button id="longBreakStopButton">Stop</button>
-    <button id="longBreakResetButton">Reset</button>
-  </div>
+    <div id="longBreakContainer">
+      <div id="longBreakTimer" class="timer">00:07</div>
+      <button id="longBreakStartButton">Start</button>
+      <button id="longBreakStopButton">Stop</button>
+      <button id="longBreakResetButton">Reset</button>
+    </div>
+  </main>
 </body>
 
 </html>
