style all timer buttons

--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
 
     <div id="pomodoroContainer">
       <div id="pomodoroTimer" class="timer">00:05</div>
-      <button id="pomodoroStartButton">Start</button>
-      <button id="pomodoroStopButton">Stop</button>
-      <button id="pomodoroResetButton">Reset</button>
+      <button id="pomodoroStartButton" class="timer-button">Start</button>
+      <button id="pomodoroStopButton" class="timer-button">Stop</button>
+      <button id="pomodoroResetButton" class="timer-button">Reset</button>
     </div>
 
     <div id="shortBreakContainer">
       <div id="shortBreakTimer" class="timer">00:06</div>
-      <button id="shortBreakStartButton">Start</button>
-      <button id="shortBreakStopButton">Stop</button>
-      <button id="shortBreakResetButton">Reset</button>
+      <button id="shortBreakStartButton" class="timer-button">Start</button>
+      <button id="shortBreakStopButton" class="timer-button">Stop</button>
+      <button id="shortBreakResetButton" class="timer-button">Reset</button>
     </div>
 
     <div id="longBreakContainer">
       <div id="longBreakTimer" class="timer">00:07</div>
-      <button id="longBreakStartButton">Start</button>
-      <button id="longBreakStopButton">Stop</button>
-      <button id="longBreakResetButton">Reset</button>
+      <button id="longBreakStartButton" class="timer-button">Start</button>
+      <button id="longBreakStopButton" class="timer-button">Stop</button>
+      <button id="longBreakResetButton" class="timer-button">Reset</button>
     </div>
   </main>
 </body>
