--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
   <main>
     <h1>Pomodoro Timer</h1>
 
-    <button id="pomodoroNavButton">Pomodoro</button>
-    <button id="shortBreakNavButton">Short Break</button>
-    <button id="longBreakNavButton">Long Break</button>
+    <nav>
+      <button id="pomodoroNavButton">Pomodoro</button>
+      <button id="shortBreakNavButton">Short Break</button>
+      <button id="longBreakNavButton">Long Break</button>
+    </nav>
 
     <div id="pomodoroContainer">
       <div id="pomodoroTimer" class="timer">00:05</div>
