hide/show buttons using utlity classes

--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
     <div id="pomodoroContainer">
       <div id="pomodoroTimer" class="timer">00:05</div>
       <button id="pomodoroStartButton" class="timer-button">Start</button>
-      <button id="pomodoroStopButton" class="timer-button">Stop</button>
-      <button id="pomodoroResetButton" class="timer-button">Reset</button>
+      <button id="pomodoroStopButton" class="timer-button hidden">Stop</button>
+      <button id="pomodoroResetButton" class="timer-button hidden">Reset</button>
     </div>
 
-    <div id="shortBreakContainer">
+    <div id="shortBreakContainer" class="hidden">
       <div id="shortBreakTimer" class="timer">00:06</div>
       <button id="shortBreakStartButton" class="timer-button">Start</button>
-      <button id="shortBreakStopButton" class="timer-button">Stop</button>
-      <button id="shortBreakResetButton" class="timer-button">Reset</button>
+      <button id="shortBreakStopButton" class="timer-button hidden">Stop</button>
+      <button id="shortBreakResetButton" class="timer-button hidden">Reset</button>
     </div>
 
-    <div id="longBreakContainer">
+    <div id="longBreakContainer" class="hidden">
       <div id="longBreakTimer" class="timer">00:07</div>
-      <button id="longBreakStartButton" class="timer-button">Start</button>
-      <button id="longBreakStopButton" class="timer-button">Stop</button>
-      <button id="longBreakResetButton" class="timer-button">Reset</button>
+      <button id="longBreakStartButton" class="timer-button hidden">Start</button>
+      <button id="longBreakStopButton" class="timer-button hidden">Stop</button>
+      <button id="longBreakResetButton" class="timer-button hidden">Reset</button>
     </div>
   </main>
 </body>
